avatar 리스트(case-01추가)

--- a/src/ui/styles/02-notification.css
+++ b/src/ui/styles/02-notification.css
@@ -30,7 +30,7 @@ h1 {
     /* 시간 */
     .notification-time {
         font-size: 0.75rem;
-        color: greem;
+        color: green;
         position: absolute;
         top: 1.25rem;
         right: 1.25rem;
