float를 활용한 아바타 리스트

--- a/src/ui/styles/05-avatar-list.css
+++ b/src/ui/styles/05-avatar-list.css
@@ -20,8 +20,28 @@
         font-size: 1rem;
         margin: 10px;
     }
-
-    /* case 02 - float */
-    /* case 03 - flex */
-    /* case 04 - grid */
 }
+/* case 02 - float */
+.case-02 {
+    background: yellow;
+    margin: 20px;
+    border: 2px solid red;
+    border-radius: 4px;
+
+    ul {
+        width: 360px;
+        background: pink;
+        padding: 10px;
+        margin: 0 auto;
+        display: flow-root;
+    }
+
+    li {
+        background: lime;
+        margin: 10px;
+        float: left;
+    }
+}
+
+/* case 03 - flex */
+/* case 04 - grid */
