반응형 레이아웃(1024px)

--- a/src/ui/styles/06-responsive-layout.css
+++ b/src/ui/styles/06-responsive-layout.css
@@ -10,13 +10,18 @@
 
 /*내비게이션, 메인 콘텐츠, 사이드바 컨테이너*/
 .nav-main-aside-wrapper {
-    border: 5px solid red;
+    display: flow-root;
 }
 
 /* 내비게이션 */
 .navigation {
     background: var(--pastel-green);
     height: 15vh;
+    @media (min-width: 1024px) {
+        width: 30%;
+        height: 80vh;
+        float: left;
+    }
 }
 
 /* 메인 콘텐츠 및 사이드바 컨테이너 */
@@ -36,6 +41,10 @@
         height: 65vh;
         float: left;
     }
+    @media (min-width: 1024px) {
+        width: 60%;
+        height: 80vh;
+    }
 }
 
 /* 사이드 바 */
@@ -47,6 +56,10 @@
         height: 65vh;
         width: 50%;
         float: left;
+    }
+    @media (min-width: 1024px) {
+        width: 40%;
+        height: 80vh;
     }
 }
 
