--- a/src/css/styles/14-flexbox.css
+++ b/src/css/styles/14-flexbox.css
@@ -12,8 +12,9 @@ body *::after {
 }
 
 /* flex 파헤치기 */
-
+/* 플렉스 컨테이너 관련 속성 */
 .case-01 {
+    margin-block-start: 600px;
     display: flex;
     /* flex-direction: row;
   flex-wrap: nowrap; */
@@ -27,7 +28,8 @@ body *::after {
     align-items: center;
     align-content: center;
     /* row-gap, column-gap을 함께 지장할 수 있는 단축 속성 */
-    gap: 20px 40px;
+    /* gap: 20px 40px; */
+    column-gap: 50px;
 
     [class*='item'] {
         /* margin-block: 10px; */
@@ -48,5 +50,34 @@ body *::after {
 
     .item2 {
         font-size: 30px;
+    }
+}
+
+/* 플렉스 아이템 관련 속성 */
+.case-02 {
+    border: 1px solid green;
+    width: 502px;
+    inline-size: 502px;
+    display: flex;
+    flex-flow: row nowrap;
+
+    [class^='item'] {
+        border: 1px solid currentColor;
+        /* width: 100px;
+    inline-size: 100px;
+    height: 100px;
+    block-size: 100px; */
+        text-align: center;
+        align-content: center;
+        /* flex-basis: 200px;
+    flex-shrink: 1;
+    flex-grow: 0; */
+        /* flex-grow, flex-shrink, flex-basis 속성으 단축 표기 */
+        flex: 0 1 150px;
+
+        &:nth-child(even) {
+            order: -1;
+            /* flex-grow: 2; */
+        }
     }
 }
