--- a/src/ui/styles/08-table.css
+++ b/src/ui/styles/08-table.css
@@ -4,13 +4,25 @@
 /* 테이블 스타일링 */
 .table-wrapper {
     margin-inline: 20px;
-    margin-block: 40px;
-    background: var(--pastel-yellow);
+    margin-block: 100px;
+    block-size: 500px;
+    overflow: auto;
 }
 
 .table-styling {
     border: 1px solid currentColor;
     inline-size: 100%;
+    border-collapse: separate;
+    border-spacing: 0;
+    /* position: relative; */
+
+    caption {
+        font-size: 2rem;
+        line-height: 1.5;
+        position: fixed;
+        top: 20px;
+        right: 20px;
+    }
 
     .number {
         inline-size: 10%;
@@ -26,5 +38,30 @@
 
     .phone {
         inline-size: 30%;
+    }
+
+    td {
+        text-align: center;
+    }
+
+    th,
+    td {
+        padding: 10px;
+        /* border: 1px solid currentColor; */
+    }
+
+    thead {
+        position: sticky;
+        top: 0;
+    }
+
+    thead tr,
+    tfoot tr {
+        background: rgb(15, 15, 28);
+        color: #fff;
+    }
+
+    tbody tr:nth-child(even) {
+        background: var(--pastel-gray);
     }
 }
