--- a/src/ui/components/text-link/text-link.html
+++ b/src/ui/components/text-link/text-link.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>로고 컴포넌트</title>
         <link
             rel="shortcut icon"
             href="/src/assets/favicon/likelion.ico"
@@ -10,16 +11,35 @@
         />
         <link rel="icon" href="/src/assets/favicon/likelion.svg" />
         <link
+            rel="preload"
+            as="font"
+            href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT@2/fonts/static/woff2/SUIT-Regular.woff2"
+        />
+        <link
             rel="stylesheet"
-            as="style"
-            crossorigin
-            href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css"
+            href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT@2/fonts/static/woff2/SUIT.css"
         />
         <link
             rel="stylesheet"
             href="/src/ui/components/text-link/text-link.css"
         />
-        <title>Document</title>
     </head>
-    <body></body>
+    <body>
+        <div class="components-container">
+            <h1>텍스트 링크 컴포넌트</h1>
+
+            <!-- 일반 텍스트 링크 -->
+            <a href="/" class="text-link"> 링크 텍스트 </a>
+
+            <!-- 새창 텍스트 링크 -->
+            <a
+                href="/"
+                class="text-link"
+                target="_blank"
+                rel="noopenner noreferrer"
+            >
+                링크 텍스트
+            </a>
+        </div>
+    </body>
 </html>
