입력서식 컴포넌트 유효성 검증

--- a/src/ui/components/input/input.css
+++ b/src/ui/components/input/input.css
@@ -28,5 +28,14 @@ form {
         left: 0;
         inset-inline-start: 0;
         translate: 0 150%;
+        display: none;
+    }
+
+    input:placeholder-shown + p {
+        display: none !important;
+    }
+
+    input:user-invalid + p {
+        display: block;
     }
 }
