--- a/src/ui/components/input/input.html
+++ b/src/ui/components/input/input.html
@@ -57,7 +57,7 @@
                         <label class="input__label" for="input-1">레이블</label>
                         <input
                             class="input__input"
-                            pattern=".{6,10}"
+                            pattern="^(?!.*.{12}).*$"
                             type="email"
                             id="input-1"
                             name="input-1"
