--- a/src/css/styles/16-gridbox.css
+++ b/src/css/styles/16-gridbox.css
@@ -82,5 +82,36 @@
 }
 
 /*네임 기반 그리드 박스*/
-.grid-box-1 {
+.grid-box-2 {
+    display: grid;
+    min-width: 642px;
+    grid-template-rows: repeat(4, 50px);
+    grid-template-columns: repeat(4, minmax(100px, 1fr));
+    grid-template-areas:
+        'item1 item1 item1 item2'
+        'item1 item1 item1 item6'
+        'item4 item5 item5 item6'
+        'item7 item5 item5 item3';
+
+    .grid-item-1 {
+        grid-area: item1;
+    }
+    .grid-item-2 {
+        grid-area: item2;
+    }
+    .grid-item-3 {
+        grid-area: item3;
+    }
+    .grid-item-4 {
+        grid-area: item4;
+    }
+    .grid-item-5 {
+        grid-area: item5;
+    }
+    .grid-item-6 {
+        grid-area: item6;
+    }
+    .grid-item-7 {
+        grid-area: item7;
+    }
 }
