--- a/src/ui/styles/15-subgrid.css
+++ b/src/ui/styles/15-subgrid.css
@@ -7,15 +7,12 @@ body {
     margin: 20px;
 }
 
-/*카드 컴포넌트*/
+/* 카드 컴포넌트 */
 .card {
     border: 1px solid var(--pastel-gray);
     border-radius: 8px;
-
     display: flex;
     flex-flow: column nowrap;
-
-    row-gap: 1rem;
     padding: 1rem;
     box-shadow: 0 0 8px 1px var(--pastel-gray);
 
@@ -25,12 +22,9 @@ body {
     }
 
     .thumbnail {
-        background: pink;
-        aspect-ratio: 3/2;
-
         img {
             width: 100%;
-            height: 100%;
+            aspect-ratio: 3/2;
             object-fit: cover;
             object-position: 0 0;
         }
@@ -44,13 +38,23 @@ body {
         display: inline-flex;
         justify-content: center;
         align-items: center;
-
         background: var(--pastel-dark-blue);
         color: var(--white);
-        padding: 0.5rem 1em;
+        padding: 0.5em 1em;
     }
 }
 
+/*서브그리드 레이아웃 그리드로 수정*/
 .container {
-    /* background: var(--pastel-lavender); */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(18.75rem, 1fr));
+    grid-template-rows: auto 1.5rem auto auto;
+    column-gap: 20px;
+    row-gap: 20px;
+
+    .card {
+        display: grid;
+        grid-template-rows: subgrid;
+        grid-row: span 4;
+    }
 }
